feat: 制作実績セクションのカード内容を更新し、メタ情報を追加。スタイルを改善し、レスポンシブデザインを強化。

--- a/index.html
+++ b/index.html
@@ -108,30 +108,81 @@
             <div class="work-grid active" data-content="active">
                 <a href="https://pictorium.io" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>Pictorium</h4>
-                    <p>画像管理・共有サービス</p>
+                    <p class="work-description">画像の仕分け・共有・モザイク処理などを行えるローカル対応の画像管理ツール</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2025年3月〜 開発中</p>
+                        <div class="stack-tags">
+                            <span class="tag">React</span>
+                            <span class="tag">Flask</span>
+                            <span class="tag">PostgreSQL</span>
+                            <span class="tag">Stripe</span>
+                            <span class="tag">Heroku</span>
+                            <span class="tag">Electron</span>
+                            <span class="tag">Vite</span>
+                        </div>
+                    </div>
                 </a>
                 <a href="https://note.com/maolab/n/nc4823d9adf7c" class="work-card">
                     <h4>Deepis</h4>
-                    <p>Fanzaのリサーチサービス</p>
+                    <p class="work-description">Fanzaのリサーチサービス</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜4月</p>
+                        <div class="stack-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Django</span>
+                            <span class="tag">REST API</span>
+                        </div>
+                    </div>
                 </a>
                 <a href="https://tips.jp/u/ma0lab/a/mauc/" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>mauc</h4>
-                    <p>ヤフオク（オークタウン）の出品超効率化ツール</p>
+                    <p class="work-description">ヤフオク（オークタウン）の出品超効率化ツール</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年3月〜5月</p>
+                        <div class="stack-tags">
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">React</span>
+                            <span class="tag">Node.js</span>
+                        </div>
+                    </div>
                 </a>
                 <a href="https://ma0lab.biz/yahuese/" class="work-card">
                     <h4>yahusse</h4>
-                    <p>ヤフオクの出品超効率化ツール（クローズド）</p>
+                    <p class="work-description">ヤフオクの出品超効率化ツール（クローズド）</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年2月〜4月</p>
+                        <div class="stack-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Selenium</span>
+                            <span class="tag">PostgreSQL</span>
+                        </div>
+                    </div>
                 </a>
             </div>
 
             <div class="work-grid" data-content="closed" style="display: none;">
                 <a href="https://tips.jp/u/ma0lab/a/maopos/" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>maopos</h4>
-                    <p>X（旧Twitter）の長文対応自動投稿予約ツール</p>
+                    <p class="work-description">X（旧Twitter）の長文対応自動投稿予約ツール</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜2月</p>
+                        <div class="stack-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Flask</span>
+                            <span class="tag">Twitter API</span>
+                        </div>
+                    </div>
                 </a>
                 <a href="https://note.com/maolab/membership" class="work-card">
                     <h4>maotools</h4>
-                    <p>業務効率化のためのツール群</p>
+                    <p class="work-description">業務効率化のためのツール群</p>
+                    <div class="work-meta-box">
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜3月</p>
+                        <div class="stack-tags">
+                            <span class="tag">Python</span>
+                            <span class="tag">Google Apps Script</span>
+                        </div>
+                    </div>
                 </a>
             </div>
 
@@ -202,3 +253,13 @@
     </footer>
 </body>
 </html>
+<style>
+.work-period {
+  color: #777;
+  font-size: 0.85rem;
+  margin-top: 6px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+</style>
