feat: 制作実績セクションのカード内容を更新し、リンクにターゲット属性を追加。技術スタックを変更し、プロジェクトの説明を詳細化。

--- a/index.html
+++ b/index.html
@@ -122,39 +122,43 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://note.com/maolab/n/nc4823d9adf7c" class="work-card">
+                <a href="https://note.com/maolab/n/nc4823d9adf7c" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>Deepis</h4>
-                    <p class="work-description">Fanzaのリサーチサービス</p>
+                    <p class="work-description">FANZA同人の売れ筋分析ツール。タグトレンド、売上データ、サムネイル傾向を可視化</p>
                     <div class="work-meta-box">
-                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜4月</p>
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年12月〜2025年3月</p>
                         <div class="stack-tags">
                             <span class="tag">Python</span>
-                            <span class="tag">Django</span>
-                            <span class="tag">REST API</span>
+                            <span class="tag">Flask</span>
+                            <span class="tag">PostgreSQL</span>
+                            <span class="tag">JavaScript</span>
+                            <span class="tag">HTML</span>
                         </div>
                     </div>
                 </a>
                 <a href="https://tips.jp/u/ma0lab/a/mauc/" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>mauc</h4>
-                    <p class="work-description">ヤフオク（オークタウン）の出品超効率化ツール</p>
+                    <p class="work-description">ヤフオク×オークタウンの出品効率化ツール。商品名管理や透かし処理に対応</p>
                     <div class="work-meta-box">
                         <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年3月〜5月</p>
                         <div class="stack-tags">
-                            <span class="tag">JavaScript</span>
-                            <span class="tag">React</span>
-                            <span class="tag">Node.js</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">PyQt</span>
+                            <span class="tag">PostgreSQL</span>
+                            <span class="tag">Heroku</span>
                         </div>
                     </div>
                 </a>
-                <a href="https://ma0lab.biz/yahuese/" class="work-card">
+                <a href="https://ma0lab.biz/yahuese/" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>yahusse</h4>
-                    <p class="work-description">ヤフオクの出品超効率化ツール（クローズド）</p>
+                    <p class="work-description">ヤフオクの自動出品ツール。画像の一括処理、透かし合成、出品履歴管理に対応</p>
                     <div class="work-meta-box">
-                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年2月〜4月</p>
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年7月〜12月</p>
                         <div class="stack-tags">
                             <span class="tag">Python</span>
-                            <span class="tag">Selenium</span>
+                            <span class="tag">PyQt</span>
                             <span class="tag">PostgreSQL</span>
+                            <span class="tag">Heroku</span>
                         </div>
                     </div>
                 </a>
@@ -163,24 +167,29 @@
             <div class="work-grid" data-content="closed" style="display: none;">
                 <a href="https://tips.jp/u/ma0lab/a/maopos/" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>maopos</h4>
-                    <p class="work-description">X（旧Twitter）の長文対応自動投稿予約ツール</p>
+                    <p class="work-description">X（旧Twitter）の長文投稿予約ツール。画像・動画対応、予約管理機能搭載</p>
                     <div class="work-meta-box">
-                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜2月</p>
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年3月〜4月</p>
                         <div class="stack-tags">
                             <span class="tag">Python</span>
-                            <span class="tag">Flask</span>
-                            <span class="tag">Twitter API</span>
+                            <span class="tag">PyQt</span>
                         </div>
                     </div>
                 </a>
-                <a href="https://note.com/maolab/membership" class="work-card">
+                <a href="https://note.com/maolab/membership" class="work-card" target="_blank" rel="noopener noreferrer">
                     <h4>maotools</h4>
                     <p class="work-description">業務効率化のためのツール群</p>
                     <div class="work-meta-box">
-                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年1月〜3月</p>
+                        <p class="work-period"><i class="fa-regular fa-calendar"></i> 2024年5月〜2025年2月</p>
                         <div class="stack-tags">
                             <span class="tag">Python</span>
-                            <span class="tag">Google Apps Script</span>
+                            <span class="tag">PyQt</span>
+                            <span class="tag">Flask</span>
+                            <span class="tag">PostgreSQL</span>
+                            <span class="tag">Heroku</span>
+                            <span class="tag">HTML</span>
+                            <span class="tag">CSS</span>
+                            <span class="tag">JavaScript</span>
                         </div>
                     </div>
                 </a>
