feat: index.htmlのスタイルシートパスを更新し、アイコン画像のパスを修正。新しいリソースセクションを追加し、Heroku登録ガイドへのリンクを設置。

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="フリーランスエンジニア mao のポートフォリオサイト">
     <title>mao - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="header-content">
                 <div class="header-text">
                     <div class="profile-header">
-                        <img src="statics/icon.png" alt="mao" class="profile-icon">
+                        <img src="assets/images/icon.png" alt="mao" class="profile-icon">
                         <div class="header-titles">
                             <h1>mao</h1>
                             <p class="subtitle">フリーランスエンジニア</p>
@@ -228,6 +228,17 @@
                         });
                     });
                 </script>
+            </section>
+
+            <section id="resources">
+                <h2>リソース</h2>
+                <div class="resource-links">
+                    <a href="pages/heroku-registration.html" class="resource-card">
+                        <i class="fas fa-presentation-screen"></i>
+                        <h3>Heroku登録ガイド</h3>
+                        <p>無料でWebアプリを公開する方法をスライド形式で解説</p>
+                    </a>
+                </div>
             </section>
 
             <section id="contact">
