--- a/pages/heroku-registration.html
+++ b/pages/heroku-registration.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Herokuアカウント作成からチーム設定までの詳細ガイド">
     <title>Heroku登録ガイド - mao Portfolio</title>
+    <link rel="stylesheet" href="../assets/css/common.css">
     <link rel="stylesheet" href="../assets/css/blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="../assets/js/toc.js"></script>
 </head>
 <body>
+    <div class="blog-container-wrapper">
     <div class="blog-container">
         <a href="../index.html" class="back-link">
             <i class="fas fa-arrow-left"></i>
@@ -30,6 +32,31 @@
             <p><strong>Herokuとは、クラウド上でWebアプリケーションを運用するためのプラットフォームです。</strong></p>
 
             <p>まずはお客様のアカウントを作成し、開発チームが作業できる環境を構築します。</p>
+
+            <h2>チーム機能について</h2>
+
+            <p>Herokuのチーム機能を活用することで、お客様と開発チームが同じプロジェクト上で協力できる環境を整えることができます。<br>
+            なお、個人アカウントでは開発者との共同作業が行えないため、チームの設定が必要となります。</p>
+
+            <h3>チーム機能で可能になること</h3>
+
+            <ul>
+                <li><strong>開発者との協業</strong> - 弊社開発者がお客様のプロジェクトにアクセス可能</li>
+                <li><strong>統一された管理</strong> - お客様が全体のコストと設定を管理</li>
+                <li><strong>安全なアクセス制御</strong> - 必要な人だけがアクセスできる権限管理</li>
+                <li><strong>透明性のある運用</strong> - すべての作業履歴がお客様に見える状態</li>
+            </ul>
+
+            <h3>料金について</h3>
+
+            <ul>
+                <li>チームメンバー5人まで：無料</li>
+                <li>6人目以降：月額$10/人</li>
+                <li>アプリケーションの利用料金は別途発生</li>
+            </ul>
+
+            <p>チームを作成する際には、クレジットカード情報の登録が必要です。</p>
+            <p>この登録はお客様ご自身で行っていただく必要があり、弊社が代行することはできませんので、あらかじめご了承ください。</p>
 
             <h2>アカウント作成の流れ</h2>
 
@@ -64,42 +91,12 @@
                 </div>
             </div>
 
-            <h2>チーム機能について</h2>
-
-            <p>Herokuのチーム機能を活用することで、お客様と開発チームが同じプロジェクト上で協力できる環境を整えることができます。<br>
-            なお、個人アカウントでは開発者との共同作業が行えないため、チームの設定が必要となります。</p>
-
-            <h3>チーム機能で可能になること</h3>
-
-            <ul>
-                <li><strong>開発者との協業</strong> - 弊社開発者がお客様のプロジェクトにアクセス可能</li>
-                <li><strong>統一された管理</strong> - お客様が全体のコストと設定を管理</li>
-                <li><strong>安全なアクセス制御</strong> - 必要な人だけがアクセスできる権限管理</li>
-                <li><strong>透明性のある運用</strong> - すべての作業履歴がお客様に見える状態</li>
-            </ul>
-
-            <h3>料金について</h3>
-
-            <ul>
-                <li>チームメンバー5人まで：無料</li>
-                <li>6人目以降：月額$10/人</li>
-                <li>アプリケーションの利用料金は別途発生</li>
-            </ul>
-
-            <div class="info-box">
-                <div class="info-box-title">ポイント</div>
-                <div class="info-box-content">
-                    チームを作成する際には、クレジットカード情報の登録が必要です。<br>
-                    この登録はお客様ご自身で行っていただく必要があり、弊社が代行することはできませんので、あらかじめご了承ください。
-                </div>
-            </div>
-
             <h2>チーム作成手順</h2>
 
             <p>アカウント作成完了後、以下の手順でチームを作成します。<br>
             手順を参考にしながら、一つずつ設定を進めてください。</p>
 
-            <h3>1. メニューからチーム作成を選択</h3>
+            <h3>メニューからチーム作成を選択</h3>
 
             <div class="blog-image">
                 <img src="../assets/images/heroku_2.png" alt="Herokuメニューからチーム作成">
@@ -107,7 +104,7 @@
 
             <p>Herokuにログイン後、画面左上の「Personal」をクリックして「Create a team」をクリックしてください。</p>
 
-            <h3>2. チーム作成メニューの選択</h3>
+            <h3>チーム作成メニューの選択</h3>
 
             <div class="blog-image">
                 <img src="../assets/images/heroku_3.png" alt="チーム作成フォーム">
@@ -217,6 +214,7 @@
 
             <p>mao</p>
         </div>
+    </div>
     </div>
 </body>
 </html>
