feat: リソースセクションのタイトルを「ガイド記事」に変更し、Heroku登録ガイドの内容を詳細に更新。アイコンも変更し、ユーザーにとっての理解を深める。

--- a/index.html
+++ b/index.html
@@ -231,12 +231,12 @@
             </section>
 
             <section id="resources">
-                <h2>リソース</h2>
+                <h2>ガイド記事</h2>
                 <div class="resource-links">
                     <a href="pages/heroku-registration.html" class="resource-card">
-                        <i class="fas fa-presentation-screen"></i>
+                        <i class="fas fa-file-alt"></i>
                         <h3>Heroku登録ガイド</h3>
-                        <p>無料でWebアプリを公開する方法をスライド形式で解説</p>
+                        <p>Herokuアカウント作成からチーム設定まで詳細に解説</p>
                     </a>
                 </div>
             </section>
